Ajustes no codigo Repository